# hypno_audio_generator

./: .gitignore  .pre-commit-config.yaml  .python-version  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  ruff.toml  ty.toml
.github/workflows/: ci.yml
src/: files_io.py  speech.py  ux.py
src/speech/: speech.py
src/speech/macos_override/: driver.py  engine.py  nsss.py
src/text_processing/: get_text.py  line_providers.py  progress_providers.py
tests/text_processing/: test_progress_providers.py
