[project]
name = "hypno-audio-generator"
version = "1.0.7"
description = "Generates a single text-to-speech audio file from multiple text files, for use in reinforcement/hypnosis audio."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyttsx3>=2.99",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.8.4",
]
